add icons, test_size and fix add_layers_model

--- a/icons/resources.qrc
+++ b/icons/resources.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="icons">
+    <file>download.ico</file>
+    <file>ai-model.ico</file>
+    <file>file1.png</file>
     <file>right-arrow.ico</file>
     <file>settings.ico</file>
     <file>user-interface.png</file>
